# deicide-wrapper

./: README.md  pyproject.toml
deicide_wrapper/cli/: main.py
